--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <title>LOL</title>
+    <title>B D J</title>
     <link href='stylesheets/screen.css' media='screen, projection' rel='stylesheet' type='text/css' />
   </head>
   <body>
@@ -16,7 +16,7 @@
         </li>
         <li>
           <a class='site' href='http://mythoughtsareyours.yolk.cc'>
-            MY THOUGHTS ARE YOURS
+            MY THOUGHTS ARE MINES
           </a>
         </li>
         <li>
